# todo-app

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  IMPLEMENTATION-SUMMARY.md  README.md  deploy-k8s-guide.md  docker-compose.yml  guide.md  main.py  pyproject.toml  render.yaml
.claude/: settings.local.json
.claude/prompts/: chatbot-guide.md  phase2-docs.md  sample_code.md  skill.md
.spec-kit/: config.yaml
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.mcp  main.py  pyproject.toml  requirements.txt  test_agent_integration.py
backend/src/: main.py
backend/src/app/: __init__.py  config.py  database.py
backend/src/app/agent/: __init__.py  agent.py  integration.py
backend/src/app/chat/: __init__.py  controller.py
backend/src/app/mcp/: __init__.py  server.py  tools.py
backend/src/app/middleware/: __init__.py  auth.py
backend/src/app/models/: __init__.py  conversation.py  message.py  task.py  user.py
backend/src/app/routers/: __init__.py  chat.py  tasks.py
backend/src/app/schemas/: __init__.py  chat.py  error.py  task.py
backend/src/app/services/: __init__.py  task_service.py
backend/src/scripts/: update_db.py
frontend/: .env.example  CLAUDE.md  Dockerfile  new-ui-plan.md  package-lock.json  package.json  responsive-check.md
frontend/src/: proxy.ts
mcp-server/: Dockerfile  values.yaml
mcp-server/templates/: NOTES.txt  configmap.yaml  (+2 more)
specs/: architecture.md  overview.md
tests/: test_todo_manager.py
todo-backend/: values.yaml
todo-frontend/: values.yaml
(+164 files in other folders)
