[project]
name = "todo-app"
version = "0.1.0"
description = "A simple CLI todo application with in-memory storage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
todo = "main:main"

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
